syntax = "proto3";

package payment.v1;

option go_package = "github.com/pptkna/rocket-factory/shared/pkg/proto/payment/v1;payment_v1";

service PaymentService {
    rpc PayOrder (PayOrderRequest) returns (PayOrderResponse);
}

// Способы оплаты
enum PaymentMethod {
    // Не указан способ оплаты (значение по умолчанию)
    PAYMENT_METHOD_UNSPECIFIED = 0;

    // Неизвестный способ оплаты
    PAYMENT_METHOD_UNKNOWN = 1;

    // Банковская карта
    PAYMENT_METHOD_CARD = 2;

    // Система быстрых платежей
    PAYMENT_METHOD_SBP = 3;

    // Кредитная карта
    PAYMENT_METHOD_CREDIT_CARD = 4;

    // Деньги инвестора (внутренний метод)
    PAYMENT_METHOD_INVESTOR_MONEY = 5;
}

// PayOrderRequest запрос на создание платежа
message PayOrderRequest {
    // UUID заказа
    string order_uuid = 1;

    // UUID пользователя, который инициирует оплату
    string user_uuid = 2;

    // Выбранный способ оплаты
    PaymentMethod payment_method = 3;
}

// PayOrderResponse ответ с transaction_uuid платежа
message PayOrderResponse {
    // UUID транзакции оплаты
    string transaction_uuid = 1;
}